2009-02-09  Bart Veer  <bartv@ecoscentric.com>

	* cdl/tasks.cdl: clarify usage of CYGNUM_UITRON_TASKS, bug
	22913.

2006-10-12  Nick Garnett  <nickg@ecoscentric.com>

	* cdl/uitron.cdl: Add reqirement for UITRON conformant mailbox
	implementation to CYGIMP_UITRON_STRICT_CONFORMANCE.

2005-08-02  Andrew Lunn  <andrew.lunn@ascom.ch>

	* tests/test2.c (task1): Cast to fix compiler warning.

2003-02-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/uitron.cdl: Update doc link.

2002-05-27  Jesper Skov  <jskov@redhat.com>

	* cdl/uitron.cdl: Don't build C tests when C++ options selected.

2002-05-22  Nick Garnett  <nickg@redhat.com>

	* doc/uitron.sgml: Fixed dangling xref.

2002-02-19  Mark Salter  <msalter@redhat.com>

	* doc/uitron.sgml: Fixed typos and such.

2002-02-14  Hugo Tyson  <hmt@redhat.com>

	* doc/uitron.sgml: General polishing... Tidied up broken emPHAsis
	on closing parentheses of function lists.  Reduced line length of
	same to fit real paper, I hope.  Added LITERAL tags all over
	config option mentions.

	New stuff... Added a whole new section "[u]ITRON Configuration
	FAQ" based on some email answers I have given in the past in
	support of customers.

2002-02-13  Hugo Tyson  <hmt@redhat.com>

	* doc/uitron.sgml: NEW FILE: Make id tags qualified with
	compat-uitron- and add a couple of tags; tidy up formatting of
	some function listings; correct comment on using functions in your
	own DSRs and ISRs.

2002-01-24  Jesper Skov  <jskov@redhat.com>

	* include/uit_func.inl (ena_int, dis_int): Wrap
	HAL_MASK_INTERRUPT/HAL_UNMASK_INTERRUPT in interrupt
	disable/restore pairs.
	* tests/testintr.cxx (detach_isr, attach_isr): Change order of
	mask/unmask and disable/restore.

2001-04-30  Jonathan Larmour  <jlarmour@redhat.com>

	* src/uit_objs.cxx: Workaround xscale tools preprocessor bug
	by avoiding determining the stack size with the preprocessor.
	* cdl/tasks.cdl (CYGDAT_UITRON_TASK_EXTERNS and 
	CYGDAT_UITRON_TASK_INITIALISERS): Ditto
